assets/css/header.css
.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  animation: scrolling-header linear both;
  animation-timeline: scroll(root);
  animation-range: 0 200px;
}

.header__wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header__title {
  color: #FFF;
  display: flex;
  font-size: 30px;
  align-items: center;
  gap: 10px;
  flex: 1;
}

.header__brand {
  width: 30px;
  height: 30px;
}

.header__nav {
  display: flex;
  align-items: center;
  gap: 30px;
  list-style: none;
}

.header__item {
  color: #9fa1a4;
  font-weight: 600;
  cursor: pointer;
  transition: color 300ms;
}

.header__item:hover {
  color: #FFF;
}

.header__button-container {
  flex: 1;
  display: flex;
  justify-content: end;
}

@keyframes scrolling-header {
  to {
    backdrop-filter: blur(30px);
    box-shadow: 0px -2px 20px 1px rgba(0, 0, 0, 0.25);
    border-bottom: 1px solid #2b539e;
  }
}

